--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -138,7 +138,7 @@ header .entry-meta {
 	.entry-content {
 		margin: 40px 2px 20px 2px;
 		padding: 10px 15px;
-		background-color: $white;
+		background-color: $black;
 		box-shadow: 0 0 0 0, 0 6px 12px rgba($black,0.1);
 		@include rounded(3px);
 		@media #{$medium} {
@@ -470,10 +470,7 @@ ul.social-buttons li a:active {
 	height: 100%;
 	overflow: hidden;
 	height: 50px;
-	@media #{$medium} {
-		background-color: $header-color;
-		min-height: 300px;
-	}
+	
 }
 .header-toggle{
 	display: block;
