--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,15 @@
 <div class="header-menu header-menu-top">
     <ul class="header-item-container">
       <li class="header-item-title header-toggle "><a href="#menu"><h2><i class="fa fa-bars"></i></h2></a></li>
-      {% for menu in site.menu reversed %}
+      <!-- <li class="header-item-title">
+        <a href="{{site.url}}/">
+          {% if site.logo %}
+            <img class="logo" src="{{site.url}}/{{ site.logo }}" alt="{{ site.title }}">
+          {% endif %}
+          <a href="{{site.url}}/" class="title"> {{ site.title }}</a>
+        </a>
+      </li>-->
+      {% for menu in site.menu %}
         {% assign class = nil %}
         {% if ((page.url contains menu.url and menu.url != '/') or (page.url == '/index.html' and menu.url == '/')) %}
           {% assign class = 'active' %}
@@ -35,9 +43,42 @@
             {% endif %}
         {% endif %}
       {% endfor %}
-      <li class="header-item"><a href="{{site.url}}/search"><h3><i class="fa fa-search"></i></h3></a></li>
+    {% if site.search %}   <li class="header-item"><a href="{{site.url}}/search"><h3><i class="fa fa-search"></i></h3></a></li> {% endif %}
     </ul>
   </div>
 <div class="entry-header">
+ <div class="header-title">
+    <div class="header-title-wrap">
+      <h1>{{ page.title }}</h1>
+      {% if page.date %}
+        <h2><span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time></span></h2>
+      {% else %}
+        <h2><span class="entry-date"><time>&nbsp;</time></span></h2>
+      {% endif %}
+
+      
+    </div><!-- /.header-title-wrap -->
+  </div><!-- /.header-title -->
+</div><!-- /.entry-header -->
+
+
+<nav id="menu" style="display: none">
+  <ul>
+    {% for menu in site.menu %}
+      {% if menu.submenu %}
+        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a>
+          <ul>
+            {% for sub in menu.submenu %}
+              <li><a href="{{site.url}}{{sub.url}}">{{sub.title}}</a></li>
+            {% endfor %}
+          </ul>
+        </li>
+      {% else %}
+        <li><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
+      {% endif %}
+    {% endfor %}
+  </ul>
+</nav>
+
 </div><!-- /.entry-header -->
 
