--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -62,31 +62,7 @@ body {
 }
 
 
-// Feature Image Caption
-.image-credit {
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	margin: 0 auto;
-	max-width: 440px;
-	padding: 10px 15px;
-	background-color: rgba($base-color,0.5);
-	color: $white;
-	@include font-rem(12);
-	text-align: right;
-	@include border-radius(3px,0,0,3px);
-	z-index: 10;
-	@media #{$medium} {
-		max-width: 760px;
-	}
-	@media #{$large} {
-		max-width: 960px;
-	}
-	a {
-		color: $white;
-		text-decoration: none;
-	}
-}
+
 
 // Single Post and Page
 // --------------------------------------------------
@@ -149,16 +125,13 @@ header .entry-meta {
 		@media #{$large} {
 			max-width: 800px;
 			margin: 50px auto 30px auto;
-			padding: 50px 80px;
-			> p:first-child {
-				@include font-size(20);
-			}
+			
 		}
 	}
 	#disqus_thread {
 		margin: 40px 2px 20px 2px;
 		padding: 10px 15px;
-		background-color: $white;
+		background-color: $black;
 		box-shadow: 0 0 0 1px rgba($border-color,0.1), 0 6px 12px rgba($black,0.1);
 		@include rounded(3px);
 		@media #{$medium} {
@@ -168,7 +141,7 @@ header .entry-meta {
 		}
 		@media #{$large} {
 			max-width: 800px;
-			padding: 50px 80px;
+			
 			margin: 0 auto 30px auto;
 		}
 	}
@@ -212,91 +185,6 @@ header .entry-meta {
 	.current-page {
 		font-weight: 700;
 	}
-}
-
-// Read More Module
-.read-more {
-	position: relative;
-	margin: 40px 2px 20px 2px;
-	padding: 40px 15px 25px;
-	background-color: $white;
-	box-shadow: 0 0 0 1px rgba($border-color,0.1), 0 6px 12px rgba($black,0.1);
-	@include rounded(3px);
-	@media #{$medium} {
-		margin: 50px 10px 20px 10px;
-		padding: 50px 40px 25px;
-	}
-	@media #{$large} {
-		max-width: 800px;
-		padding: 50px 80px;
-		margin: 60px auto;
-	}
-	text-align: center;
-	@include clearfix;
-}
-.read-more-header {
-	position: absolute;
-	top: -20px;
-	left: 0;
-	right: 0;
-	height: 35px;
-	a {
-		@extend .btn;
-	}
-}
-.read-more-content {
-	@include font-size(16);
-	// Dotted line underlines for links
-	p > a,
-	li > a {
-		border-bottom: 1px dotted lighten($link-color, 50);
-		&:hover {
-			border-bottom-style: solid;
-		}
-	}
-	h3 {
-		margin: 0;
-		@include font-rem(28);
-		a {
-			color: $text-color;
-		}
-		@media #{$medium} {
-			@include font-rem(36);
-		}
-	}
-}
-.author-img {
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-}
-.author-container{
-	display: flex;
-}
-.author-bio{
-	padding-top: 30px;
-	padding-left: 20px;
-	flex-grow: 1;
-}
-ul.social-buttons li a {
-    display: block;
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-    font-size: 20px;
-    line-height: 40px;
-    outline: 0;
-	  color: #fff;
-    background-color: #222;
-
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    transition: all .3s;
 }
 .list-inline {
   padding-left: 0;
@@ -359,7 +247,7 @@ ul.social-buttons li a:active {
 		}
 	}
 	article {
-		background-color: $white;
+		background-color: $black;
 		box-shadow: 0 0 0 0, 0 6px 12px rgba($base-color,0.1);
 		@include rounded(3px);
 		margin-bottom: 20px;
@@ -369,7 +257,6 @@ ul.social-buttons li a:active {
 		}
 		@media #{$large} {
 			margin-bottom: 30px;
-			padding: 50px 80px;
 		}
 	}
 }
@@ -529,6 +416,7 @@ ul.social-buttons li a:active {
 	width: 100%;
 	height: $menu-height;
 	z-index: 20;
+	text-align: center;
 	ul {
 		margin: 0 auto;
 		list-style-type: none;
@@ -549,9 +437,6 @@ ul.social-buttons li a:active {
 	z-index: 100;
 	box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.4);
 }
-.header-menu-overflow ul li a{
-	color: $white;
-}
 
 .header-menu-top .sub-item{
 	background-color: $menu-top;
@@ -563,7 +448,6 @@ ul.social-buttons li a:active {
 
 .header-item,
 .header-item-title {
-	float: right;
 	padding-left: 20px;
 	padding-right: 20px;
 	border-top-color: transparent;
@@ -589,13 +473,21 @@ ul.social-buttons li a:active {
 }
 .header-item{
 	height: 100%;
-	display: none;
+	display: inline-block;
+	
+	@media #{$small} {
+		display: none;
+	}
+	
+	@media #{$medium} {
+		display: none;
+	}
+	
 	@media #{$large} {
-		display: block;
+		display: inline-block;
 	}
 }
 .header-item-title{
-	float: left;
 	border-top-width: 0px;
 	height: 100%;
 	a.title {
@@ -649,23 +541,7 @@ ul.social-buttons li a:active {
 	border-left-color: $header-margin;
 }
 
-.button-twitter {
-	color: $white;
-	position: fixed;
-	margin-top: $menu-height / 2 - 20;
-	margin-right: 10px;
-	top: 0;
-	right: 0;
-	z-index: 10000000000;
-	@media #{$large}{
-		top: auto;
-		bottom: 0;
-	}
 
-	span {
-		display: none;
-		@media #{$medium}{
-			display: inline;
-		}
-	}
+h1, h2, h3, h4, h5, h6 {
+  color: red;
 }
