--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -25,7 +25,7 @@ $sub-item-color			 : black;
 $header-margin			 : #F45145;
 $menu-top				 : black;
 $menu-height			 : 70px;
-$menu-overflow			 : #2E2E2E;
+$menu-overflow			 : black;
 $body-color      		 : black;
 $text-color      		 : white;
 $comp-color 	 		 : complement(#222);
@@ -44,6 +44,6 @@ $info				     : #308cbc;
 // Screen Size
 // --------------------------------------------------
 
-$small               : "only screen and (min-width: 30em)";
-$medium              : "only screen and (min-width: 48em)";
-$large               : "only screen and (min-width: 62.5em)";
+$small               : "only screen and (max-width : 800px)";
+$medium              : "only screen and (max-width : 1200px)";
+$large               : "only screen and (min-width : 1201px)";
