--- a/assets/css/jquery.mmenu.all.css
+++ b/assets/css/jquery.mmenu.all.css
@@ -1276,7 +1276,7 @@ html.mm-opening .mm-menu.mm-front, html.mm-opening .mm-menu.mm-next {
 	jQuery.mmenu themes extension CSS
 */
 .mm-menu.mm-theme-dark {
-  background: #333333;
+  background: black;
   border-color: rgba(0, 0, 0, 0.15);
   color: rgba(255, 255, 255, 0.8); }
   .mm-menu.mm-theme-dark .mm-navbar > *,
