Dodanie logo i sponsorów, ujednolicenie layoutu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,7 @@
 <div class="header-menu header-menu-top">
     <ul class="header-item-container">
       <li class="header-item-title header-toggle "><a href="#menu"><h2><i class="fa fa-bars"></i></h2></a></li>
-      <!-- <li class="header-item-title">
-        <a href="{{site.url}}/">
-          {% if site.logo %}
-            <img class="logo" src="{{site.url}}/{{ site.logo }}" alt="{{ site.title }}">
-          {% endif %}
-          <a href="{{site.url}}/" class="title"> {{ site.title }}</a>
-        </a>
-      </li>-->
+
       {% for menu in site.menu %}
         {% assign class = nil %}
         {% if ((page.url contains menu.url and menu.url != '/') or (page.url == '/index.html' and menu.url == '/')) %}
@@ -39,7 +32,7 @@
             {% if menu.url contains 'http://' or menu.url contains 'https://' %}
                 <li class="header-item {{class}}"><a href="{{menu.url}}" target="_blank"><h3>{{ menu.title }}</h3></a></li>
             {% else %}
-                <li class="header-item {{class}}"><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
+                <li class="header-item {{class}}" id="{{menu.id}}"><a href="{{site.url}}{{menu.url}}"><h3>{{ menu.title }}</h3></a></li>
             {% endif %}
         {% endif %}
       {% endfor %}
