--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -109,47 +109,6 @@ header .entry-meta {
 #menu{
   margin-bottom: 48px;
 }
-#post,
-#page {
-	.entry-content {
-		margin: 40px 2px 20px 2px;
-		padding: 10px 15px;
-		background-color: $black;
-		box-shadow: 0 0 0 0, 0 6px 12px rgba($black,0.1);
-		@include rounded(3px);
-		@media #{$medium} {
-			margin-left: 10px;
-			margin-right: 10px;
-			padding: 20px 30px;
-		}
-		@media #{$large} {
-			max-width: 800px;
-			margin: 50px auto 30px auto;
-			
-		}
-	}
-	#disqus_thread {
-		margin: 40px 2px 20px 2px;
-		padding: 10px 15px;
-		background-color: $black;
-		box-shadow: 0 0 0 1px rgba($border-color,0.1), 0 6px 12px rgba($black,0.1);
-		@include rounded(3px);
-		@media #{$medium} {
-			margin-left: 10px;
-			margin-right: 10px;
-			padding: 20px 30px;
-		}
-		@media #{$large} {
-			max-width: 800px;
-			
-			margin: 0 auto 30px auto;
-		}
-	}
-	.entry-meta {
-		margin: 50px 30px 30px;
-		text-align: center;
-	}
-}
 .entry-tags {
 	display: block;
 	margin-bottom: 6px;
@@ -232,34 +191,48 @@ ul.social-buttons li a:active {
 
 // Post Index
 // --------------------------------------------------
-#post-index {
+
 	#main {
-		margin: 40px 2px 20px 2px;
+	
 		@media #{$medium} {
-			margin-left: 20px;
-			margin-right: 20px;
+			margin-left: 10px;
+			margin-right: 10px;
 		}
 		@media #{$large} {
-			max-width: 800px;
-			margin-top: 50px;
+			margin: 0px 2px 20px 2px;
+			max-width: 1000px;
 			margin-left: auto;
 			margin-right: auto;
 		}
+	}
+	.main-content {
+		@media #{$large} {
+			padding: 25px 15px;
+			max-width: 800px;
+			display: inline-block;
+			width: 800px;
+		}
+	}
+	.side-banner {
+		@media #{$large} {
+			max-width: 190px;
+			display: inline-block;
+			vertical-align: top;
+			width: 190px;
+		}
+		display: none;
 	}
 	article {
 		background-color: $black;
 		box-shadow: 0 0 0 0, 0 6px 12px rgba($base-color,0.1);
 		@include rounded(3px);
 		margin-bottom: 20px;
-		padding: 25px 15px;
-		@media #{$medium} {
-			padding: 30px;
-		}
+		
 		@media #{$large} {
 			margin-bottom: 30px;
 		}
 	}
-}
+
 .entry-image-index {
 	margin-top: -25px;
 	margin-left: -15px;
@@ -461,6 +434,11 @@ ul.social-buttons li a:active {
 		height: $menu-height - 2;
 	}
 }
+#sponsorzy.header-item {
+		@media #{$large} {
+			display: none;
+		}
+}
 ///sections
 .logo{
   width: $menu-height;
@@ -485,20 +463,6 @@ ul.social-buttons li a:active {
 	
 	@media #{$large} {
 		display: inline-block;
-	}
-}
-.header-item-title{
-	border-top-width: 0px;
-	height: 100%;
-	a.title {
-		font-size: 1.5rem;
-	    padding-left: 5px;
-		display: none;
-		vertical-align: middle;
-		height: $menu-height - 2;
-		@media #{$medium}{
-			display: table-cell;
-		}
 	}
 }
 
