--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -7,6 +7,8 @@
 		<p>Sponsorzy:</p>
 		<a href="http://metmix.com.pl" target="_blank"><img
 			src="{{site.url}}/images/metmix_190.png" alt="Metmix" /></a>
+		<a href="http://rmsport.pl/" target="_blank"><img
+			src="{{site.url}}/images/logo-rms-190.png" alt="RMS" /></a>
 	</div>
 
 </div>
