artykuł - Monika podbija Włochy

--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -34,7 +34,7 @@ figure {
     @media #{$large} {
       img {
         width: 310px;
-        float: left;
+//         float: left;
         margin-right: 10px;
       }
       figcaption {
