Aktualizacja trenera GM

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -256,6 +256,9 @@ ul.social-buttons li a:active {
 	}
 }
 
+.clearfix {
+  @include clearfix;
+}	
 // Footer
 // --------------------------------------------------
 .footer-wrapper {
